--- a/private/cie/cie.tex
+++ b/private/cie/cie.tex
@@ -65,12 +65,12 @@
 \begin{abstract}
   Realizability theory 
 \iflong 
-  is not only a fundamental tool in logic
-  and computability, but also 
+  is not just a fundamental tool in logic
+  and computability.  It also 
   has direct application to the design and
-  implementation of programs: it
+  implementation of programs, since it
 \fi % \iflong
-  can produce interfaces for the data
+  can produce code interfaces for the data
   structure corresponding to a
   mathematical theory.
 %
