--- a/private/cie/rzbib.bib
+++ b/private/cie/rzbib.bib
@@ -415,3 +415,13 @@ KEY="Peyton Jones"}
          pages = "77--92",
          year = "2006"}
 
+@inproceedings{bauer+:cie07,
+         title = "{RZ}: a tool for bringing constructive and 
+                  computable mathematics closer to programming
+                  practice",
+         author = "Andrej Bauer and Christopher A. Stone",
+         booktitle = "Computation and Logic in the Real World,
+                      Third Conference on Computability in Europe",
+        series = "LNCS",
+        volume = "4497",
+        pages = "28--42"}
