--- a/private/cie/specifications.tex
+++ b/private/cie/specifications.tex
@@ -215,7 +215,7 @@ However, the programmer is free to implement a specification using any
 types and terms that exist in OCaml. 
 
 A special kind of term is an
-\emph{obligation} $\ooblig{\ox}{\oty}{\op}{\oe}$ which means ``in term
+\emph{obligation} $\ooblig{\ox}{\oty}{\op}{\oe}$, which means ``in term
 $e$, let $x$ be any element of $\values{\oty}$ that satisfies~$\op$''.
 An obligation is equivalent to a combination of Hilbert's indefinite
 description operator and a local definition,
