--- a/private/cie/translation.tex
+++ b/private/cie/translation.tex
@@ -81,8 +81,8 @@ assertion x_def : x \iPer{s} \iE
 %
 The assertion does \emph{not} force~$\f{x}$ to be defined as~$e$, only
 to be equivalent to it with respect to~$\per_{\f{s}}$. This is
-useful, as often the easiest way to define a value is not the most
-efficient way to compute it.
+useful, as often the clearest or easiest ways to define a value are not the most
+efficient ways to compute it.
 
 Constructions of sets in the input language are translated to
 corresponding constructions of modest sets.
