--- a/private/cie/wtype.tex
+++ b/private/cie/wtype.tex
@@ -1,4 +1,4 @@
-\section{A complete example}
+\section{An Interface for the Theory of General Inductive Types}
 \label{sec:outp-induct-types}
 
 To give at least one complete example, we include here an
