--- a/private/cie/introduction.tex
+++ b/private/cie/introduction.tex
@@ -122,7 +122,7 @@ in Section~\ref{sec:examples}. We conclude with remarks on related
 work in Section~\ref{sec:related-work}.
 \fi %\iflong
 
-An earlier description of or RZ work appears in \cite{bauer+:clase05};
+An earlier description of our RZ work appears in \cite{bauer+:clase05};
 since then, the input syntax and underlying implementation has been
 significantly revised and improved, and the support for dependent types and
 hoisting is completely new.
