--- a/private/cie/rzbib.bib
+++ b/private/cie/rzbib.bib
@@ -425,3 +425,14 @@ KEY="Peyton Jones"}
         series = "LNCS",
         volume = "4497",
         pages = "28--42"}
+
+@InProceedings{bauer07:_implem_rz,
+  author = 	 {Andrej Bauer and Iztok Kavkler},
+  title = 	 {Implementing real numbers with RZ},
+  booktitle = 	 {Fourth International Conference on Computability and Complexity in Analysis},
+  year =	 2007,
+  editor =	 {Klaus Weihrauch and Ning Zhong},
+  series =	 {Electronic Notes in Theoretical Computer Science},
+  note =	 {Forthcoming}
+}
+
