journal version, refree comments taken into account

--- a/private/cie/comparison.tex
+++ b/private/cie/comparison.tex
@@ -79,7 +79,7 @@ Other approaches are based on simple programming languages augmented with
 datatypes for real numbers~\cite{escardo97:_pcf,marcial-romero04:_seman}
 and topological algebras~\cite{TZ98}, or machine models augmented with
 (suitably chosen subsets of) real numbers such as Real
-RAM~\cite{borodin75}, the Blum-Smale-Shub
+RAM~\cite{borodin75}, the Blum-Shub-Smale
 model~\cite{blum98:_compl_real_comput}, and the Exact Geometric
 Computation model~\cite{yap06:_theor_real_comput_egc}. The motivation
 behind these ranges from purely theoretical concerns about
