--- a/private/cie/examples.tex
+++ b/private/cie/examples.tex
@@ -58,7 +58,7 @@ In this section we show how RZ produces obligations, is sometimes able
 to optimize them away, and show the effect of hoisting.
 
 Consider how we might define division of real numbers. Assuming the
-set of real numbers~$\f{real}$, a constant $\f{zero}$, and
+set of real numbers~$\f{real}$, constants $\f{zero}$ and $\f{one}$, and
 multiplication operation~$\f{*}$ have already been declared and
 axiomatized, we might write:
 %
