--- a/private/cie/implementation.tex
+++ b/private/cie/implementation.tex
@@ -17,7 +17,7 @@ subtyping (implicit coercions) for sum types and subset types.
 The
 details are fairly standard, so are omitted here. One non-obvious
 consequence of the realizability translation, however, is that the
-subset types with provably-equal predicates, e.g.,
+subset types with logically equivalent predicates, e.g.,
 $\isubset{\ix}{\iS}{\iand{\ipp_1(\ix)}{\ipp_2(\ix)}}$ and
 $\isubset{\ix}{\iS}{\iand{\ipp_2(\ix)}{\ipp_1(\ix)}}$ are isomorphic
 but not equal in general. An
