--- a/private/cie/introduction.tex
+++ b/private/cie/introduction.tex
@@ -21,8 +21,8 @@ constructive mathematical analysis, the answer is less clear. How do we
 implement the real numbers (a Cauchy-complete Archimedean ordered
 field)? Or choose the operations for a compact metric
 space or a space of smooth functions? Significant research goes into
-finding satisfactory representations~\cite{Wei00,TZ98,Bla97,EL00}, while
-implementations of exact real arithmetic~\cite{Mue00,Lam05a} show that
+finding satisfactory representations~\cite{Wei00,TZ98,Bla97,edalat04:_domain_theor_differ_calcul_funct}, while
+implementations of exact real arithmetic~\cite{muller01,Lam05a} show that
 theory can be put into practice quite successfully.
 
 \iflong
