--- a/private/cie/rzbib.bib
+++ b/private/cie/rzbib.bib
@@ -168,6 +168,17 @@ KEY="Peyton Jones"}
   year = {1998}
 }
 
+@Article{edalat04:_domain_theor_differ_calcul_funct,
+  author = 	 {Abbas Edalat and Andr\'{e} Lieutier},
+  title = 	 {Domain Theory and Differential Calculus (Functions of one variable)},
+  journal = 	 {Mathematical Structures in Computer Science},
+  year = 	 2004,
+  volume =	 14,
+  number =	 6,
+  pages =	 {771--802},
+  month =	 {December}
+}
+
 @InProceedings{EL00,
   author = {Abbas Edalat and Andr\'{e} Lieutier},
   title = {Domain of Differentiable Functions},
@@ -176,6 +187,19 @@ KEY="Peyton Jones"}
   Klaus},
   year = {2000},
   note = {CCA2000 Workshop, Swansea, Wales, September 17--19, 2000}
+}
+
+
+@InCollection{muller01,
+  author = 	 {Norbert M\"{u}ller},
+  title = 	 {The {iRRAM}: Exact Arithmetic in {C}++},
+  booktitle = 	 {Computability and Complexity in Analysis: 4th International Workshop, CCA 2000 Swansea, UK, September 17, 2000, Selected Papers},
+  pages =	 {222--252},
+  publisher =	 {Springer},
+  year =	 2001,
+  editor =	 {Jens Blanck and Vasco Brattka and Peter Hertling},
+  number =	 2064,
+  series =	 {Lecture Notes in Computer Science}
 }
 
 @InProceedings{Mue00,
@@ -428,7 +452,7 @@ KEY="Peyton Jones"}
 
 @InProceedings{bauer07:_implem_rz,
   author = 	 {Andrej Bauer and Iztok Kavkler},
-  title = 	 {Implementing real numbers with RZ},
+  title = 	 {Implementing real numbers with {RZ}},
   booktitle = 	 {Fourth International Conference on Computability and Complexity in Analysis},
   year =	 2007,
   editor =	 {Klaus Weihrauch and Ning Zhong},
