--- a/private/cie/logic.tex
+++ b/private/cie/logic.tex
@@ -101,15 +101,15 @@ The simplest theory $\ith$ is a list of \emph{theory element}\/s
 $\ithy{\ite_1 \ldots \ite_n}$. A theory element may specify that a certain
 set, set element, proposition or predicate, or model must exist (using
 the 
-\textsf{Parameter} keyword). It may also provide a definition
+\texttt{Parameter} keyword). It may also provide a definition
 of a set, term, proposition, predicate, or theory (using the 
-\textsf{Definition} keyword). Finally, a theory element can be
-a named axiom (using the \textsf{Axiom} keyword).
+\texttt{Definition} keyword). Finally, a theory element can be
+a named axiom (using the \texttt{Axiom} keyword).
 
 We allow model parameters in theories; 
 typical examples in mathematics include
 the theory of a vector space parameterized by a field of scalars%
-\iflong,
+\iflong
 , or the theory of the real numbers parameterized by a model of the
 natural numbers.
 \else % \iflong
