--- a/private/cie-jlc/cie.tex
+++ b/private/cie-jlc/cie.tex
@@ -1,3 +1,8 @@
+\documentclass{llncs}
+\newif\iflong
+\longtrue
+\pagestyle{plain}
+
 \usepackage{amsmath}
 \usepackage{amssymb}
 %\usepackage{theorem}
@@ -124,6 +129,8 @@ By using the realizability
 \appendix
 \input{wtype.tex}
 \fi % iflong
+
+\end{document}
 
 %%% Local Variables: 
 %%% mode: latex
