--- a/private/cie-jlc/wtype.tex
+++ b/private/cie-jlc/wtype.tex
@@ -5,9 +5,9 @@ To give at least one complete example, we include here an
 unabridged output for the theory of inductive types shown in
 Figure~\ref{fig:wtype}.
 
-\sourcefile{wtype.mli}
+\sourcefilex{wtype.mli}
 
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: "cie.tex"
+%%% TeX-master: "paper.tex"
 %%% End: 
