--- a/private/msfp-2008/slides.tex
+++ b/private/msfp-2008/slides.tex
@@ -40,14 +40,14 @@ not Necessarily Functional Programming}
   \frametitle{One-page summary of the talk}
 
   \begin{itemize}
-  \item Program development and extract
-  \item RZ
-  \item Impure realizers
+  \item Realizability
+  \item Specifications via realizability
+  \item Examples of non-functional realizers
   \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{A successful framework for program development}
+  \frametitle{Program development via ``propositions as types''}
 
   \begin{itemize}
   \item Mathematical foundation: type theory
